<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutFragment">

    <TextView
        android:id="@+id/checkout_sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/checkout_text2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkout_shipping_coast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkout_text3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/checkout_sub_total"
        app:layout_constraintTop_toBottomOf="@+id/checkout_sub_total" />

    <TextView
        android:id="@+id/checkout_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkout_text4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/checkout_shipping_coast"
        app:layout_constraintTop_toBottomOf="@+id/checkout_shipping_coast" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkout_address_line1_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkout_address_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/checkout_text5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_total" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkout_address_line2_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_address_line1_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkout_address_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkout_address_postal_code_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_address_line2_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkout_address_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkout_address_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_address_postal_code_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkout_address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkout_address_mobile_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_address_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/checkout_address_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input5" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/checkout_pay_now_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#466926"
        android:text="@string/checkout_button1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_address_mobile_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>