<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".navigation.SellerProductAddFragment">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="844dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seller_product_add_text1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_add_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="38dp"
                android:layout_marginRight="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_add_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/seller_product_add_input1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_add_price_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_add_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/seller_product_add_input2"
                    android:inputType="number|numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_add_description_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/seller_product_add_input4"
                    android:lines="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_add_quantity_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_add_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/seller_product_add_input3"
                    android:inputType="number|numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/product_add_brand_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/seller_product_add_input5"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/product_add_brand"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/square_round"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/product_add_category_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/seller_product_add_input6"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/product_add_category"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:addStatesFromChildren="false"
                android:alwaysDrawnWithCache="false"
                android:background="@drawable/square_round"
                android:clipChildren="false"
                android:drawingCacheQuality="auto"
                android:dropDownWidth="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="true" />

            <Button
                android:id="@+id/product_add_first_image"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/square_round"
                android:text="@string/seller_product_add_btn3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/product_add_select_image"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/square_round"
                android:text="@string/seller_product_add_btn1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/add_product_image_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:text="@string/seller_product_add_text2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/product_add_add_product"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="#5C94E7"
                android:text="@string/seller_product_add_btn2"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>